feat: Adiciona recurso dropdown ao menu
Este commit modifica o texto "Menu" para ícone "Bars" e adiciona
o recurso dropdown para que o munu de links fique oculto ou visível
mediate clique.

--- a/style.css
+++ b/style.css
@@ -38,7 +38,12 @@ a {
 }
 
 .menu {
-  width: 23%;
+  margin-top: 25px;
+}
+
+#nav_links {
+  display: flex;
+  flex-direction: column;
 }
 
 .nav_link{
@@ -108,5 +113,5 @@ footer {
 footer p {
   font-family: Verdana;
   text-align: center;
-  font-size: 9px;  
+  font-size: 9px;
 }
