fix: Fixado tamanho maximo box menu
Este commit fixa um valor de max-width para o box menu, para que a
diagramação da página não seja quebrada.

--- a/style.css
+++ b/style.css
@@ -39,11 +39,12 @@ a {
 
 .menu {
   margin-top: 25px;
+  margin-right: 20px;
+  max-width: 23%;
 }
 
 #nav_links {
-  display: flex;
-  flex-direction: column;
+  display: none;
 }
 
 .nav_link{
